<resources>
    <string name="app_name">Projekat1</string>
    <string name="prazan_str">""</string>
    <string name="naslov_login">Informacioni sistem za praćenje stanja obolelih od Covid19</string>
    <string name="naslov_profil">Podaci o zdravstvenom radniku</string>
    <string name="naslov_karton_pacijenta">Karton pacijenta</string>
    <string name="naslov_pregled_stanja">Pregled brojnog stanja pacijenata</string>
    <string name="naslov_new_patient">Unos novog pacijenta</string>
    <string name="form_username">Unesite ime</string>
    <string name="form_lastname">Unesite prezime</string>
    <string name="form_hospital">Unesite ime bolnice u kojoj ste zaposleni</string>
    <string name="form_pin">Unesite pin</string>
    <string name="broj_u_cekaonici">Broj pacijenata u čekaonici</string>
    <string name="broj_hospitalizovanih">Broj hospitalizovanih pacijenata</string>
    <string name="broj_otpustenih">Broj otpuštenih pacijenata</string>
    <string name="form_simptomi">Unesite simptome i opšte stanje pacijenta</string>
    <string name="profil_ime">Ime:</string>
    <string name="profil_prezime">Prezime:</string>
    <string name="profil_bolnica">Bolnica:</string>
    <string name="profil_ime_vrednost">vr</string>
    <string name="profil_prezime_vrednost">vr</string>
    <string name="profil_bolnica_vrednost">vr</string>
    <string name="karton_stanje_pri_prijemu">Stanje pri prijemu</string>
    <string name="karton_tr_stanje">Trenutno stanje</string>
    <string name="karton_datum_prijema">Datum prijema</string>
    <string name="login_greska_prazno">*Sva polja moraju biti popunjena</string>
    <string name="login_greska_pin_duzina">*Pin mora da sadrži četiri cifre</string>
    <string name="login_greska_pin_pogresan">*Pogrešan pin</string>
    <string name="login_greska_pin_prazan">*Polje za pin mora biti popunjeno</string>
    <string name="tab_cekaonica">Čekaonica</string>
    <string name="tab_hospitalizovani">Hospitalizovani</string>
    <string name="tab_otpusteni">Otpušteni</string>
    <string name="cekaonica_search">Pretraži po imenu ili prezimenu</string>
    <string name="btn_login">Prijava</string>
    <string name="btn_add">Dodaj u čekaonicu</string>
    <string name="btn_hospitalizacija">Hospitalizacija</string>
    <string name="btn_zdrav">Zdrav</string>
    <string name="btn_karton">Karton</string>
    <string name="btn_otpust">Otpust</string>
    <string name="btn_izmeni">Izmeni</string>
    <string name="btn_profil_odjava">Odjava</string>
    <string name="btn_odustani">Odustani</string>
</resources>
