<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    tools:context=".valerija_nagl_rn682018.application.view.fragments.AddPatientFragment"
  >


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    >


    <TextView
        android:id="@+id/naslovTv"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:autoSizeTextType="uniform"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/naslov_new_patient"
        android:textStyle="bold"
        android:textSize="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logoIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_person_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/naslovTv"
        app:layout_constraintBottom_toTopOf="@id/add_usernameTi"
        />


    <EditText
        android:id="@+id/add_usernameTi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIv"
        app:layout_constraintBottom_toTopOf="@id/add_lastnameTi"
        android:hint="@string/form_username"
        />

    <EditText
        android:id="@+id/add_lastnameTi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_usernameTi"
        app:layout_constraintBottom_toTopOf="@id/add_simptomiTi"
        android:hint="@string/form_lastname"
        />

    <EditText
        android:id="@+id/add_simptomiTi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_lastnameTi"
        app:layout_constraintBottom_toTopOf="@id/greskaUnosaTv"
        android:maxLines="1"
        android:hint="@string/form_simptomi"
        />

    <TextView
        android:id="@+id/greskaUnosaTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_simptomiTi"
        app:layout_constraintBottom_toTopOf="@id/addBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15dp"
        android:textAlignment="center"
        />


    <Button
        android:id="@+id/addBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greskaUnosaTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/btn_add"
        android:color="@android:color/black"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="30dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

