<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/naslovTv"
         />


    <TextView
        android:id="@+id/naslovTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naslov_login"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/logoIv"
        app:layout_constraintBottom_toTopOf="@id/usernameTi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:textAlignment="center"
         />



    <EditText
        android:id="@+id/usernameTi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/naslovTv"
        app:layout_constraintBottom_toTopOf="@id/lastnameTi"
        android:hint="@string/form_username"
        android:padding="5dp"
        android:background="@drawable/box2"
        />

    <EditText
        android:id="@+id/lastnameTi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTi"
        app:layout_constraintBottom_toTopOf="@id/hospitalTi"
        android:hint="@string/form_lastname"
        android:padding="5dp"
        android:background="@drawable/box2"
        />

    <EditText
        android:id="@+id/hospitalTi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastnameTi"
        app:layout_constraintBottom_toTopOf="@id/pinTi"
        android:hint="@string/form_hospital"
        android:background="@drawable/box2"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/pinTi"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hospitalTi"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        android:hint="@string/form_pin"
        android:layout_marginBottom="100dp"
        android:background="@drawable/box2"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/greskaTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/pinTi"
        app:layout_constraintBottom_toTopOf="@id/greskaPinTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="1dp"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12dp"
    />

    <TextView
        android:id="@+id/greskaPinTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/greskaTv"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12dp"
        android:paddingBottom="1dp"
     />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greskaPinTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/btn_login"
        android:color="@android:color/black"
        android:background="@android:color/darker_gray"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>