<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_medicalRecord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


    <TextView
        android:id="@+id/naslov_kartonTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/karton_logoIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:autoSizeTextType="uniform"
        android:text="@string/naslov_karton_pacijenta"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/karton_logoIv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/ic_local_hospital_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/naslov_kartonTv"
        app:layout_constraintBottom_toTopOf="@id/karton_nameTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"

        />

    <TextView
        android:id="@+id/karton_nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/karton_logoIv"
        app:layout_constraintBottom_toTopOf="@id/karton_lastnameEt"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        android:textSize="15dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/karton_lastnameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/karton_nameTv"
        app:layout_constraintBottom_toTopOf="@id/karton_stanjeLbl"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        tools:ignore="NotSibling" />
    
    <TextView
        android:id="@+id/karton_stanjeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karton_stanje_pri_prijemu"
        app:layout_constraintTop_toBottomOf="@id/karton_lastnameEt"
        app:layout_constraintBottom_toTopOf="@id/stanje_pri_prijemuEt"
        app:layout_constraintStart_toStartOf="@id/karton_lastnameEt"
        android:textSize="15dp"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/stanje_pri_prijemuEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/karton_stanjeLbl"
        app:layout_constraintBottom_toTopOf="@id/karton_tr_stanjeLbl"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="15dp"
        android:padding="5dp"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/karton_tr_stanjeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karton_tr_stanje"
        app:layout_constraintTop_toBottomOf="@id/stanje_pri_prijemuEt"
        app:layout_constraintBottom_toTopOf="@id/tr_stanjeEt"
        app:layout_constraintStart_toStartOf="@id/stanje_pri_prijemuEt"
        android:textSize="15dp"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/tr_stanjeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/karton_tr_stanjeLbl"
        app:layout_constraintBottom_toTopOf="@id/datum_prijemaLbl"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:padding="5dp"
        android:layout_marginBottom="3dp"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/datum_prijemaLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karton_datum_prijema"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tr_stanjeEt"
        app:layout_constraintBottom_toTopOf="@id/datum_prijemaTv"
        app:layout_constraintStart_toStartOf="@id/tr_stanjeEt"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/datum_prijemaTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/datum_prijemaLbl"
        app:layout_constraintStart_toStartOf="@id/datum_prijemaLbl"
        android:textSize="15dp"
        android:text="24/5/2020"
        />


    <Button
        android:id="@+id/karton_odustaniBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/datum_prijemaTv"
        app:layout_constraintEnd_toStartOf="@id/karton_izmeniBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_odustani"
        android:color="@android:color/black"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="40dp"
        />

    <Button
        android:id="@+id/karton_izmeniBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/karton_odustaniBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datum_prijemaTv"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_izmeni"
        android:color="@android:color/black"
        android:background="@android:color/darker_gray"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>